Added new files

--- a/.github/workflows/03-working-dir-and-shells.yaml
+++ b/.github/workflows/03-working-dir-and-shells.yaml
@@ -1,9 +1,12 @@
 name: 03 - Working Dirs & Shells
-on: [workflow_dispatch]
+
+on:
+  workflow_dispatch:
 defaults:
   run:
     shell: bash
     # working-directory: /de/ed
+
 jobs:
   display-wd-info:
     runs-on: ubuntu-latest
