--- a/.github/workflows/12-expressions-and-contexts.yaml
+++ b/.github/workflows/12-expressions-and-contexts.yaml
@@ -1,6 +1,12 @@
 name: 12 - Expressions & Contexts
-on: [push, pull_request, issues, workflow_dispatch]
+
+on:
+  push:
+  pull_request:
+  issues:
+  workflow_dispatch:
 run-name: "Expressions & Contexts by @${{ github.actor }}, event: ${{ github.event_name }}"
+
 jobs:
   runs-on-issues-and-prs:
     runs-on: ubuntu-latest
